--- a/APSA_2012/Paper/Bibliography_EBMA.bib
+++ b/APSA_2012/Paper/Bibliography_EBMA.bib
@@ -15,7 +15,7 @@
 
 @INCOLLECTION{Abramowitz:2000,
   author = {Abramowitz, Alan I.},
-  title = {Bill and Al's Excellent Adventure: Forecasting the 1996 Presidential
+  title = {Bill and {A}l's Excellent Adventure: Forecasting the 1996 Presidential
 	Election},
   booktitle = {Before the Vote: {F}orecasting American National Elections},
   publisher = {Sage Publications},
@@ -30,7 +30,7 @@
 
 @ARTICLE{Abramowitz:2012,
   author = {Abramowitz, Alan I.},
-  title = {Forecasting in a Polarized Era: The Time for Change Model and the
+  title = {Forecasting in a Polarized Era: The Time-for-Change Model and the
 	2012 Presidential Election},
   journal = {PS: Political Science \& Politics},
   year = {2012},
@@ -90,7 +90,7 @@
 
 @ARTICLE{Author:2020,
   author = {Anne Author},
-  title = {Publication},
+  title = {A Redacted Publication},
   journal = {Yet another Journal of Publications},
   year = {2020},
   volume = {1},
@@ -102,7 +102,7 @@
 
 @ARTICLE{Author:2020b,
   author = {Anne Author and Another Co Author},
-  title = {Yet another publication},
+  title = {A redacted publication},
   journal = {Journal of Publications},
   year = {2020},
   volume = {1},
@@ -263,9 +263,8 @@
 
 @MISC{brandt:cran:2012,
   author = {Patrick T. Brandt},
-  title = {MSBVAR: Bayesian Estimators and Inferences for VAR Models},
+  title = {{MSBVAR}: Bayesian Estimators and Inferences for {VAR} Models},
   howpublished = {Comprehensive R-Archive Network},
-  month = {July},
   year = {2012},
   date-added = {2013-02-10 15:35:04 +0000},
   date-modified = {2013-02-10 15:36:51 +0000}
@@ -290,7 +289,6 @@
   note = {Paper prepared for the 28th Annual Summer Meeting of the Society
 	for Political Methodology. \url{http://polmeth.wustl.edu/media/Paper/RHMethods20110721small_1.pdf}
 	(accessed August 20, 2011)},
-  month = {July},
   year = {2011},
   date-added = {2011-06-29 16:29:28 -0400},
   date-modified = {2011-09-30 14:20:06 -0400},
@@ -327,7 +325,7 @@
 }
 
 @BOOK{brandt:williams:2007,
-  title = {Modeling Multiple Time Series},
+  title = {Multiple Time Series Models},
   publisher = {Sage Publications},
   year = {2007},
   author = {Patrick T. Brandt and John T. Williams},
@@ -470,7 +468,7 @@
 
 @ARTICLE{Campbell:2005,
   author = {Campbell, James E.},
-  title = {Introduction---Assessments of the 2004 Presidential Vote Forecasts},
+  title = {Introduction--{A}ssessments of the 2004 Presidential Vote Forecasts},
   journal = {PS: Political Science \& Politics},
   year = {2005},
   volume = {38},
@@ -482,7 +480,7 @@
 
 @ARTICLE{Campbell:2004,
   author = {Campbell, James E.},
-  title = {Introduction---The 2004 Presidential Election Forecasts},
+  title = {Introduction--{T}he 2004 Presidential Election Forecasts},
   journal = {PS: Political Science \& Politics},
   year = {2004},
   volume = {37},
@@ -565,7 +563,7 @@
 
 @ARTICLE{Chipman:2010,
   author = {Hugh A. Chipman and Edward I. George and Robert E. McCulloch},
-  title = {BART: Bayesian Additive Regression Trees},
+  title = {{BART}: Bayesian Additive Regression Trees},
   journal = {The Annals of Applied Statistics},
   year = {2010},
   volume = {4},
@@ -650,7 +648,7 @@
 }
 
 @ARTICLE{Cuzan:2012,
-  author = {Cuz\`an, Alfred G.},
+  author = {Cuz\'an, Alfred G.},
   title = {Forecasting the 2012 Presidential Election with the Fiscal Model},
   journal = {PS: Political Science \& Politics},
   year = {2012},
@@ -662,7 +660,7 @@
 }
 
 @ARTICLE{Cuzan:Bundrick:2008,
-  author = {Cuz\`an, Alfred G. and Bundrick, Charles M.},
+  author = {Cuz\'an, Alfred G. and Bundrick, Charles M.},
   title = {Forecasting the 2008 Presidential Election: A Challenge for the Fiscal
 	Model},
   journal = {PS: Political Science \& Politics},
@@ -675,7 +673,7 @@
 }
 
 @UNPUBLISHED{Cuzan:2004,
-  author = {Cuz\`an, Alfred G. and Bundrick, Charles M.},
+  author = {Cuz\'an, Alfred G. and Bundrick, Charles M.},
   title = {Fiscal Effects on Presidential Elections: A Forecast for 2004},
   note = {Paper prepared for presentation at the American Political Science
 	Association, Chicago \url{http://uwf.edu/govt/facultyforums/documents/fiscaleffectsprselect2004.pdf}},
@@ -738,7 +736,7 @@
 }
 
 @ARTICLE{Goijer:Hyndman:2006,
-  author = {{De Goijer}, Jan G. and Hyndman, Rob J.},
+  author = {{De Gooijer}, Jan G. and Hyndman, Rob J.},
   title = {25 years of time series forecasting},
   journal = {International Journal of Forecasting},
   year = {2006},
@@ -836,7 +834,7 @@
 @UNPUBLISHED{Fair:2012,
   author = {Fair, Ray C.},
   title = {Personal Website},
-  note = {\url{http://fairmodel.econ.yale.edu/} (accessed january 27, 2013)},
+  note = {\url{http://fairmodel.econ.yale.edu/} (accessed January 27, 2013)},
   year = {2012},
   date-added = {2013-01-28 02:58:27 +0000},
   date-modified = {2013-01-29 19:28:34 +0000}
@@ -912,13 +910,14 @@
   date-modified = {2011-03-04 20:00:55 -0500}
 }
 
-@ARTICLE{Feldkircher:2010,
+@ARTICLE{Feldkircher:2012,
   author = {Feldkircher, Martin},
   title = {Forecast Combination and {B}ayesian Model Averaging: A Prior Sensitivity
 	Analysis},
   journal = {Journal of Forecasting},
   year = {2011},
-  pages = {{in press}},
+  pages = {361-376},
+  number = {4},
   bdsk-url-1 = {http://dx.doi.org/10.1002/for.1228},
   date-added = {2011-06-14 13:39:50 -0400},
   date-modified = {2011-06-14 13:40:20 -0400},
@@ -1130,8 +1129,8 @@
 }
 
 @UNPUBLISHED{Graefe:2010,
-  author = {Andreas Graefe and Aldfred G. Cuzan and Randal J. Jones and J. Scott
-	Armstrong},
+  author = {Andreas Graefe and Aldfred G. Cuz\'an and Randal J. Jones and J.
+	Scott Armstrong},
   title = {Combining Forecasts for {U.S.} Presidential Elections: {The PollyVote}},
   note = {Working Paper. \url{http://dl.dropbox.com/u/3662406/Articles/Graefe_et_al_Combining.pdf}
 	(accessed May 15, 2011)},
@@ -1231,7 +1230,7 @@
 @UNPUBLISHED{hibbs:2012,
   author = {Hibbs, Douglas A.},
   title = {Obama's Re-election Prospects under `Bread and Peace/ Voting in the
-	2012 US Presidential Election},
+	2012 {US} Presidential Election},
   note = {\url{http://www.douglas-hibbs.com/HibbsArticles/HIBBS_OBAMA-REELECT-31July2012r1.pdf}},
   year = {2012},
   date-added = {2012-08-10 17:16:44 +0000},
@@ -1241,7 +1240,7 @@
 @ARTICLE{Hibbs:2012a,
   author = {Hibbs, Douglas A.},
   title = {Obama's Reelection Prospects under ``Bread and Peace'' Voting in
-	the 2012 US Presidential Election},
+	the 2012 {US} Presidential Election},
   journal = {PS: Political Science \& Politics},
   year = {2012},
   volume = {45},
@@ -1253,8 +1252,8 @@
 
 @UNPUBLISHED{Hibbs:2004,
   author = {Hibbs, Douglas A.},
-  title = {Implications of the `Bread and Peace Model' of US Presidential Voting
-	for the 2004 Election Outcome},
+  title = {Implications of the `Bread and Peace Model' of {US} Presidential
+	Voting for the 2004 Election Outcome},
   note = {http://www.douglas-hibbs.com/Elections2004-00-96-92/election2004.pdf
 	(accessed Jan. 27, 2013)},
   year = {2004},
@@ -1286,7 +1285,7 @@
 
 @UNPUBLISHED{Hibbs:1992,
   author = {Hibbs, Douglas A.},
-  title = {THE 1992 PRESIDENTIAL ELECTION: Clinton is the Probable Winner, but
+  title = {The 1992 presidential election: Clinton is the Probable Winner, but
 	Only Narrowly, Getting Just over 51 Percent of the Two-Party Vote},
   note = {\url{http://www.douglas-hibbs.com/Elections2004-00-96-92/forecast92.pdf}
 	(accessed Jan. 27, 2013)},
@@ -1422,7 +1421,6 @@
   volume = {56},
   pages = {218-236},
   number = {1},
-  month = {January},
   date-added = {2012-08-10 17:06:47 +0000},
   date-modified = {2012-08-10 17:07:49 +0000}
 }
@@ -1577,7 +1575,7 @@
 
 @ARTICLE{Linzer:2013,
   author = {Drew Linzer},
-  title = {Dynamic Bayesian Forecasting of Presidential Elections in the States},
+  title = {Dynamic {B}ayesian Forecasting of Presidential Elections in the States},
   journal = {Journal of the American Statistical Association},
   year = {Forthcoming},
   owner = {jmontgomery},
@@ -1622,7 +1620,7 @@
 }
 
 @ARTICLE{MoellerEtAl:2012,
-  author = {M\"oller, Anette and Lenkoski, Alex and Thorarinsdottir, Thordis
+  author = {M\"oller, Annette and Lenkoski, Alex and Thorarinsdottir, Thordis
 	L.},
   title = {Multivariate Probabilistic Forecasting Using Ensemble {B}ayesian
 	Model Averaging and Copulas},
@@ -1746,7 +1744,7 @@
 @ARTICLE{Montgomery:etal:1998,
   author = {Montgomery, Alan L. and Zarnowitz, Victor and Tsay, Ruey and Tiaom
 	George},
-  title = {Forecasting the U.S. Unemployement Rate},
+  title = {Forecasting the {U.S.} Unemployement Rate},
   journal = {Journal of the American Statistical Association},
   year = {1998},
   volume = {93},
@@ -1756,28 +1754,21 @@
   date-modified = {2012-08-12 21:30:42 +0000}
 }
 
-@ARTICLE{Montgomery:2012c,
+@UNPUBLISHED{Montgomery:2012d,
   author = {Montgomery, Jacob M. and Florian Hollenbach and Michael D. Ward},
-  title = {Ensemble Predictions of the 2012 US Presidential Election},
-  journal = {PS: Political Science \& Politics},
-  year = {2012\emph{b}},
-  volume = {45},
-  pages = {651-654},
-  number = {4},
-  month = {October},
-  owner = {jmontgomery},
-  timestamp = {2013.01.16}
+  title = {Ensemble {BMA} Forecasting},
+  note = {\url{http://cran.r-project.org/web/packages/EBMAforecast/EBMAforecast.pdf}},
+  year = {2013}
 }
 
 @ARTICLE{mhw:2012,
   author = {Jacob M. Montgomery and Florian Hollenbach and Michael D. Ward},
-  title = {Improving Predictions Using Ensemble Bayesian Model Averaging},
+  title = {{ }{I}mproving Predictions Using Ensemble {B}ayesian Model Averaging},
   journal = {Political Analysis},
-  year = {2012\emph{a}},
+  year = {2012},
   volume = {20},
   pages = {271-291},
   number = {3},
-  month = {June},
   date-added = {2012-08-10 16:54:10 +0000},
   date-modified = {2012-08-10 16:56:43 +0000}
 }
@@ -1803,6 +1794,18 @@
   bdsk-url-1 = {http://hdl.handle.net/1902.1/17286},
   owner = {jacobmontgomery},
   timestamp = {2012.01.12}
+}
+
+@ARTICLE{Montgomery:2012c,
+  author = {Montgomery, Jacob M. and Florian Hollenbach and Michael D. Ward},
+  title = {Ensemble Predictions of the 2012 {US} Presidential Election},
+  journal = {PS: Political Science \& Politics},
+  year = {2012},
+  volume = {45},
+  pages = {651-654},
+  number = {4},
+  owner = {jmontgomery},
+  timestamp = {2013.01.16}
 }
 
 @ARTICLE{Montgomery:2010,
@@ -1918,7 +1921,7 @@
 
 @ARTICLE{Palm:Zellner:1992,
   author = {Palm, Franz C. and Zellner, Arnold},
-  title = {To Combine of Not to Combine? Issues of Combining Forecasts},
+  title = {To Combine of Not to Combine? {I}ssues of Combining Forecasts},
   journal = {Journal of Forecasting},
   year = {1992},
   volume = {11},
@@ -2253,12 +2256,14 @@
   address = {Cambridge, MA}
 }
 
-@ARTICLE{Surowiecki:2004,
-  author = {Surowiecki, J.},
+@BOOK{Surowiecki:2004,
   title = {The Wisdom of Crowds: Why the Many Are Smarter Than the Few and How
-	Collective Wisdom Shapes Business},
-  journal = {Economies, Societies and Nations},
-  year = {2004}
+	Collective Wisdom Shapes Business, Economies, Society, and Nations},
+  publisher = {Doubleday},
+  year = {2004},
+  author = {Surowiecki, James},
+  address = {New York},
+  journal = {Economies, Societies and Nations}
 }
 
 @INCOLLECTION{Tanzi_2008,
